test case visibility and question visibility

--- a/.commit-log.md
+++ b/.commit-log.md
@@ -13,3 +13,9 @@
   - `src/components/home/Support.tsx`
   - `src/pages/Homepage.tsx`
 
+### Commit: **879881b**
+- **User:** 3roland59
+- **Date:** Tue Jul 8 18:37:58 2025 +0000
+- **Message:** Merge branch 'main' of https://github.com/3Roland59/CodEdit_client
+- **Files Changed:**
+
