--- a/.commit-log.md
+++ b/.commit-log.md
@@ -26,3 +26,16 @@
 - **Files Changed:**
   - `.commit-log.md`
 
+### Commit: **341f09c**
+- **User:** 3roland59
+- **Date:** Tue Jul 8 19:21:28 2025 +0000
+- **Message:** test case visibility and question visibility
+- **Files Changed:**
+  - `.commit-log.md`
+  - `src/components/dashboard/PostChallenge.tsx`
+  - `src/pages/Authpage.tsx`
+  - `src/pages/DashboardLayout.tsx`
+  - `src/pages/Homepage.tsx`
+  - `src/pages/ResultLookup.tsx`
+  - `src/pages/StudentChallenge.tsx`
+
