--- a/.commit-log.md
+++ b/.commit-log.md
@@ -1,57 +1,335 @@
-### Commit: **39c70c8**
+### Commit: **f0b2d22**
 - **User:** 3roland59
-- **Date:** Tue Jun 24 13:29:51 2025 +0000
-- **Message:** update: sort and filter popovers
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** initialization and landing and auth pages done
 - **Files Changed:**
-  - `src/components/dashboard/Submissions.tsx`
 
-### Commit: **7d26018**
-- **User:** 3roland59
-- **Date:** Sun Jul 6 22:59:33 2025 +0000
-- **Message:** home edited
-- **Files Changed:**
+  - `.gitignore`
+  - `README.md`
+  - `eslint.config.js`
+  - `index.html`
+  - `package-lock.json`
+  - `package.json`
+  - `public/android-chrome-192x192.png`
+  - `public/android-chrome-512x512.png`
+  - `public/apple-touch-icon.png`
+  - `public/favicon-16x16.png`
+  - `public/favicon-32x32.png`
+  - `public/favicon.ico`
+  - `public/site.webmanifest`
+  - `src/App.css`
+  - `src/App.tsx`
+  - `src/assets/add.png`
+  - `src/assets/code.png`
+  - `src/assets/cup.png`
+  - `src/assets/hat.png`
+  - `src/assets/logo.jpeg`
+  - `src/assets/mark.png`
+  - `src/assets/solve.png`
+  - `src/components/ParticlesBackground.tsx`
+  - `src/components/home/Banner.tsx`
   - `src/components/home/Support.tsx`
+  - `src/main.tsx`
+  - `src/pages/Authpage.tsx`
   - `src/pages/Homepage.tsx`
+  - `src/pages/Notfound.tsx`
+  - `src/vite-env.d.ts`
+  - `tsconfig.app.json`
+  - `tsconfig.json`
+  - `tsconfig.node.json`
+  - `vite.config.ts`
 
-### Commit: **879881b**
+### Commit: **1d53b6a**
 - **User:** 3roland59
-- **Date:** Tue Jul 8 18:37:58 2025 +0000
-- **Message:** Merge branch 'main' of https://github.com/3Roland59/CodEdit_client
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** dashboard layout done
 - **Files Changed:**
 
-### Commit: **5d629ef**
-- **User:** 3roland59
-- **Date:** Tue Jul 8 18:38:21 2025 +0000
-- **Message:** merge fix
-- **Files Changed:**
-  - `.commit-log.md`
-
-### Commit: **341f09c**
-- **User:** 3roland59
-- **Date:** Tue Jul 8 19:21:28 2025 +0000
-- **Message:** test case visibility and question visibility
-- **Files Changed:**
-  - `.commit-log.md`
-  - `src/components/dashboard/PostChallenge.tsx`
+  - `src/App.tsx`
+  - `src/components/dashboard/Home.tsx`
   - `src/pages/Authpage.tsx`
   - `src/pages/DashboardLayout.tsx`
+
+### Commit: **293891f**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** add post challenge page
+- **Files Changed:**
+
+  - `components.json`
+  - `package-lock.json`
+  - `package.json`
+  - `src/App.css`
+  - `src/App.tsx`
+  - `src/assets/success.json`
+  - `src/components/dashboard/Challenges.tsx`
+  - `src/components/dashboard/Home.tsx`
+  - `src/components/dashboard/PostChallenge.tsx`
+  - `src/components/ui/badge.tsx`
+  - `src/components/ui/button.tsx`
+  - `src/components/ui/card.tsx`
+  - `src/components/ui/checkbox.tsx`
+  - `src/components/ui/input.tsx`
+  - `src/components/ui/label.tsx`
+  - `src/components/ui/select.tsx`
+  - `src/components/ui/sonner.tsx`
+  - `src/components/ui/textarea.tsx`
+  - `src/lib/utils.ts`
+  - `src/pages/DashboardLayout.tsx`
+  - `tsconfig.app.json`
+  - `tsconfig.json`
+  - `vite.config.ts`
+
+### Commit: **928ab4b**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** challenge list page added
+- **Files Changed:**
+
+  - `src/assets/empty.png`
+  - `src/components/dashboard/Challenges.tsx`
+  - `src/components/dashboard/PostChallenge.tsx`
+
+### Commit: **c5c891a**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** challenge detail page added
+- **Files Changed:**
+
+  - `src/App.tsx`
+  - `src/assets/notfound.png`
+  - `src/components/dashboard/ChallengeDetail.tsx`
+  - `src/components/dashboard/Challenges.tsx`
+  - `src/pages/DashboardLayout.tsx`
+
+### Commit: **7ec3d40**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** submission page done
+- **Files Changed:**
+
+  - `package-lock.json`
+  - `package.json`
+  - `src/App.tsx`
+  - `src/components/dashboard/ChallengeDetail.tsx`
+  - `src/components/dashboard/Challenges.tsx`
+  - `src/components/dashboard/PostChallenge.tsx`
+  - `src/components/dashboard/Submissions.tsx`
+  - `src/components/ui/button.tsx`
+  - `src/components/ui/dialog.tsx`
+  - `src/components/ui/input.tsx`
+  - `src/pages/Authpage.tsx`
   - `src/pages/Homepage.tsx`
+  - `src/pages/StudentChallenge.tsx`
+
+### Commit: **8642a03**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** submission detail screen initiated
+- **Files Changed:**
+
+  - `src/App.tsx`
+  - `src/components/dashboard/ChallengeDetail.tsx`
+  - `src/components/dashboard/Challenges.tsx`
+  - `src/components/dashboard/Submissions.tsx`
+  - `src/components/ui/table.tsx`
+  - `src/pages/StudentChallenge.tsx`
+
+### Commit: **59e6340**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** result page done
+- **Files Changed:**
+
+  - `src/App.tsx`
+  - `src/components/dashboard/Submissions.tsx`
   - `src/pages/ResultLookup.tsx`
   - `src/pages/StudentChallenge.tsx`
 
-### Commit: **fb42f69**
+### Commit: **7ccf342**
 - **User:** 3roland59
-- **Date:** Tue Jul 8 19:51:49 2025 +0000
-- **Message:** update auth ui
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** ui touch up
 - **Files Changed:**
-  - `.commit-log.md`
+
+  - `src/components/home/Support.tsx`
+  - `src/pages/DashboardLayout.tsx`
+
+### Commit: **c83d999**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** fixed sonner
+- **Files Changed:**
+
+  - `src/components/ui/sonner.tsx`
+
+### Commit: **7732f83**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** authentication integrated
+- **Files Changed:**
+
+  - `package-lock.json`
+  - `package.json`
+  - `src/App.tsx`
+  - `src/api/User.ts`
+  - `src/components/common/ConfirmDialog.tsx`
+  - `src/config/config.ts`
+  - `src/context/UserContext.tsx`
+  - `src/pages/Authpage.tsx`
+  - `src/pages/DashboardLayout.tsx`
+
+### Commit: **11da841**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** fetch and post chalenges integrated
+- **Files Changed:**
+
+  - `package-lock.json`
+  - `package.json`
+  - `src/App.tsx`
+  - `src/components/dashboard/Challenges.tsx`
+  - `src/components/dashboard/Home.tsx`
+  - `src/components/dashboard/PostChallenge.tsx`
+  - `src/config/config.ts`
+  - `src/hooks/useChallenges.ts`
   - `src/pages/Authpage.tsx`
 
-### Commit: **6a49969**
+### Commit: **df55800**
 - **User:** 3roland59
-- **Date:** Tue Jul 8 19:53:25 2025 +0000
-- **Message:** update: homepage
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** challenge details integrated
 - **Files Changed:**
-  - `.commit-log.md`
+
+  - `src/components/dashboard/ChallengeDetail.tsx`
+
+### Commit: **a86856a**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** student submission done
+- **Files Changed:**
+
+  - `src/components/dashboard/ChallengeDetail.tsx`
+  - `src/components/dashboard/Home.tsx`
+  - `src/hooks/useAllSubmissions.ts`
+  - `src/hooks/useSubmissions.ts`
+  - `src/pages/StudentChallenge.tsx`
+
+### Commit: **b22fb60**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** view submissions done
+- **Files Changed:**
+
+  - `src/components/dashboard/ChallengeDetail.tsx`
+  - `src/components/dashboard/Submissions.tsx`
+
+### Commit: **a941027**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** student view result done
+- **Files Changed:**
+
+  - `src/components/dashboard/Submissions.tsx`
+  - `src/pages/ResultLookup.tsx`
+
+### Commit: **3a7b081**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** fixed dashboard home
+- **Files Changed:**
+
+  - `package-lock.json`
+  - `package.json`
+  - `src/components/dashboard/Home.tsx`
+
+### Commit: **a34e58d**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** minors
+- **Files Changed:**
+
+  - `src/components/dashboard/Home.tsx`
+  - `src/pages/ResultLookup.tsx`
+
+### Commit: **3cd155f**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** challenges responsiveness
+- **Files Changed:**
+
+  - `src/components/dashboard/Challenges.tsx`
+  - `src/pages/StudentChallenge.tsx`
+
+### Commit: **7e3f27a**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** export as pdf added
+- **Files Changed:**
+
+  - `package-lock.json`
+  - `package.json`
+  - `src/components/dashboard/Submissions.tsx`
+  - `src/pages/ResultLookup.tsx`
+
+### Commit: **9a6308a**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** filter options added
+- **Files Changed:**
+
+  - `package-lock.json`
+  - `package.json`
+  - `src/components/dashboard/Submissions.tsx`
+  - `src/components/ui/popover.tsx`
+  - `src/components/ui/sheet.tsx`
+  - `src/pages/ResultLookup.tsx`
+
+### Commit: **5ce4c2f**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** added ai to results lookup
+- **Files Changed:**
+
+  - `src/pages/ResultLookup.tsx`
+
+### Commit: **7464720**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** ai analysis done
+- **Files Changed:**
+
+  - `package-lock.json`
+  - `package.json`
+  - `src/pages/ResultLookup.tsx`
+
+### Commit: **d720a1c**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** get hint ai done
+- **Files Changed:**
+
+  - `src/components/dashboard/PostChallenge.tsx`
+  - `src/pages/StudentChallenge.tsx`
+
+### Commit: **87ac3a6**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** edited homepage and other minors
+- **Files Changed:**
+
+  - `src/assets/snap.jpeg`
+  - `src/components/dashboard/ChallengeDetail.tsx`
+  - `src/components/dashboard/Home.tsx`
+  - `src/components/dashboard/PostChallenge.tsx`
+  - `src/components/ui/card.tsx`
+  - `src/components/ui/dialog.tsx`
+  - `src/pages/DashboardLayout.tsx`
   - `src/pages/Homepage.tsx`
+  - `src/pages/StudentChallenge.tsx`
+
+### Commit: **652768a**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** update: hero
+- **Files Changed:**
+
+  - `src/components/ParticlesBackground.tsx`
+  - `src/hooks/useAllSubmissions.ts`
+  - `src/pages/DashboardLayout.tsx`
+  - `src/pages/Homepage.tsx`
+
+### Commit: **0df2d2b**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** error message handling and non executed submission handling
+- **Files Changed:**
+
+  - `src/components/dashboard/Home.tsx`
+  - `src/components/dashboard/PostChallenge.tsx`
+  - `src/components/dashboard/Submissions.tsx`
+  - `src/hooks/useAllSubmissions.ts`
+  - `src/hooks/useSubmissions.ts`
+  - `src/pages/DashboardLayout.tsx`
+  - `src/pages/ResultLookup.tsx`
+
+### Commit: **39c70c8**
+- **User:** 3roland59
+- **Date:** C:\Users\_guest\Documents\CodEdit_client\node_modules\@3roland59\gawkn- **Message:** update: sort and filter popovers
+- **Files Changed:**
+
+  - `src/components/dashboard/Submissions.tsx`
 
