hidden testcases for students view

--- a/.commit-log.md
+++ b/.commit-log.md
@@ -333,3 +333,11 @@
 
   - `src/components/dashboard/Submissions.tsx`
 
+### Commit: **7b243bb**
+- **User:** 3roland59
+- **Date:** Tue Jul 8 20:13:18 2025 +0000
+- **Message:** dash fix
+- **Files Changed:**
+  - `.commit-log.md`
+  - `src/pages/DashboardLayout.tsx`
+
