fix(student_challenge): fix endpoint to fetch particular challenge

--- a/.commit-log.md
+++ b/.commit-log.md
@@ -367,3 +367,14 @@
   - `src/components/dashboard/Submissions.tsx`
   - `src/pages/ResultLookup.tsx`
 
+### Commit: **5deb283**
+- **User:** 3roland59
+- **Date:** Sun Aug 3 14:44:30 2025 +0000
+- **Message:** removed logo
+- **Files Changed:**
+  - `.commit-log.md`
+  - `src/components/dashboard/ChallengeDetail.tsx`
+  - `src/pages/Authpage.tsx`
+  - `src/pages/DashboardLayout.tsx`
+  - `src/pages/Homepage.tsx`
+
