--- a/.commit-log.md
+++ b/.commit-log.md
@@ -387,3 +387,12 @@
   - `src/pages/ResultLookup.tsx`
   - `src/pages/StudentChallenge.tsx`
 
+### Commit: **779d103**
+- **User:** 3roland59
+- **Date:** Sat Aug 30 11:51:10 2025 +0000
+- **Message:** fix(student_challenge): fix endpoint to fetch particular challenge
+- **Files Changed:**
+  - `.commit-log.md`
+  - `src/hooks/useChallenge.ts`
+  - `src/pages/StudentChallenge.tsx`
+
