(extra): add now lottie file

--- a/.commit-log.md
+++ b/.commit-log.md
@@ -396,3 +396,11 @@
   - `src/hooks/useChallenge.ts`
   - `src/pages/StudentChallenge.tsx`
 
+### Commit: **7b5d5a2**
+- **User:** 3roland59
+- **Date:** Sat Aug 30 12:10:11 2025 +0000
+- **Message:** fix(student_challenge): add new loading state for hint
+- **Files Changed:**
+  - `.commit-log.md`
+  - `src/pages/StudentChallenge.tsx`
+
